Многоэтапная сборка [#505359] - minimal VM