@@ -3,8 +3,25 @@ RUN mkdir job4j_devops
 WORKDIR /job4j_devops
 COPY . .
 RUN gradle clean build -x test
+RUN jar xf /job4j_devops/build/libs/DevOps-1.0.0.jar
+RUN jdeps --ignore-missing-deps -q \
+    --recursive \
+    --multi-release 21 \
+    --print-module-deps \
+    --class-path 'BOOT-INF/lib/*' \
+    /job4j_devops/build/libs/DevOps-1.0.0.jar > deps.info
+RUN jlink \
+    --add-modules $(cat deps.info) \
+    --strip-debug \
+    --compress 2 \
+    --no-header-files \
+    --no-man-pages \
+    --output /slim-jre
 
-FROM openjdk:21-ea-slim-bullseye
-COPY --from=builder /job4j_devops/build/libs/DevOps-1.0.0.jar DevOps-1.0.0.jar
-EXPOSE 8080
-ENTRYPOINT ["java", "-jar", "DevOps-1.0.0.jar"]
+FROM debian:bookworm-slim
+ENV JAVA_HOME /user/java/jdk21
+ENV PATH $JAVA_HOME/bin:$PATH
+COPY --from=builder /slim-jre $JAVA_HOME
+COPY --from=builder /job4j_devops/build/libs/DevOps-1.0.0.jar .
+ENTRYPOINT java -jar DevOps-1.0.0.jar
+
